--- a/Question 3/public/views/home.client.view.html
+++ b/Question 3/public/views/home.client.view.html
@@ -1,5 +1,31 @@
 <div class="container">
-    <div class="row">
-        Home Page
+    <div class="main-container">
+        <div class="page-header">
+            <h3><i style="color: #335397" class="fa fa-facebook-square"></i> Facebook API</h3>
+        </div>
+
+        <div class="btn-group btn-group-justified">
+            <a href="https://developers.facebook.com/docs/graph-api/quickstart/" target="_blank" class="btn btn-primary">
+                <i class="fa fa-check-square-o"></i> Quickstart
+            </a>
+            <a href="https://developers.facebook.com/tools/explorer" target="_blank" class="btn btn-primary">
+                <i class="fa fa-facebook"></i> Graph API Explorer
+            </a>
+            <a href="https://developers.facebook.com/docs/graph-api/reference/" target="_blank" class="btn btn-primary">
+                <i class="fa fa-code-fork"></i> API Reference
+            </a>
+        </div>
+
+        <h3><i class="fa fa-user"></i> My Profile</h3>
+
+        <img src="https://scontent.xx.fbcdn.net/v/t1.0-1/p50x50/13001062_1199487340062511_2304084755978109137_n.jpg?oh=038b732b88699feff878fe6df2b9e42e&amp;oe=5829DB1D" width="90" height="90" class="thumbnail">
+        <h4>Ayeni Psalmson </h4>
+        <h6>First Name: Ayeni</h6>
+        <h6>Last Name: Psalmson</h6>
+        <h6>Gender: male</h6>
+        <h6>Link: https://www.facebook.com/app_scoped_user_id/1185137318164180/</h6>
+        <h6>Email: ayeniolusegunsamson@yahoo.com </h6>
+
+        <br>
     </div>
 </div>
