--- a/Question 3/public/views/home.client.view.html
+++ b/Question 3/public/views/home.client.view.html
@@ -1,31 +1,32 @@
 <div class="container">
-    <div class="main-container">
-        <div class="page-header">
-            <h3><i style="color: #335397" class="fa fa-facebook-square"></i> Facebook API</h3>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">List Of Logged Users</div>
+                <div class="panel-body">
+                    <div ng-repeat="x in facebookData">
+                        <div class="well">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="thumbnail"
+                                         ng-src="http://graph.facebook.com/{{ x.doc._id }}/picture?type=square&width=246&height=260"/>
+                                </div>
+                                <div class="col-md-8">
+                                    <h4>{{ x.doc.name }}</h4>
+                                    <ul class="list-group">
+                                        <li class="list-group-item">Email: {{ x.doc.email}}</li>
+                                        <li class="list-group-item">
+                                            Logged In: {{ x.doc.lastseen | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}
+                                        </li>
+                                    </ul>
+                                    <a class="btn btn-primary" target="_blank"
+                                       ng-href="{{ x.doc.link }}"> View on Facebook </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="btn-group btn-group-justified">
-            <a href="https://developers.facebook.com/docs/graph-api/quickstart/" target="_blank" class="btn btn-primary">
-                <i class="fa fa-check-square-o"></i> Quickstart
-            </a>
-            <a href="https://developers.facebook.com/tools/explorer" target="_blank" class="btn btn-primary">
-                <i class="fa fa-facebook"></i> Graph API Explorer
-            </a>
-            <a href="https://developers.facebook.com/docs/graph-api/reference/" target="_blank" class="btn btn-primary">
-                <i class="fa fa-code-fork"></i> API Reference
-            </a>
-        </div>
-
-        <h3><i class="fa fa-user"></i> My Profile</h3>
-
-        <img src="https://scontent.xx.fbcdn.net/v/t1.0-1/p50x50/13001062_1199487340062511_2304084755978109137_n.jpg?oh=038b732b88699feff878fe6df2b9e42e&amp;oe=5829DB1D" width="90" height="90" class="thumbnail">
-        <h4>Ayeni Psalmson </h4>
-        <h6>First Name: Ayeni</h6>
-        <h6>Last Name: Psalmson</h6>
-        <h6>Gender: male</h6>
-        <h6>Link: https://www.facebook.com/app_scoped_user_id/1185137318164180/</h6>
-        <h6>Email: ayeniolusegunsamson@yahoo.com </h6>
-
-        <br>
     </div>
 </div>
